--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/lab": "^5.0.0-alpha.97",
     "@mui/material": "5.10.3",
     "@mui/styles": "5.10.3",
+    "@reduxjs/toolkit": "^1.9.3",
     "@simonwep/pickr": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -27,8 +28,10 @@
     "@types/react-custom-scrollbars": "^4.0.10",
     "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "^18.0.6",
+    "@types/react-redux": "^7.1.25",
     "apexcharts": "^3.35.5",
     "autoprefixer": "^10.4.8",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.0",
     "chart.js": "^3.9.1",
     "depcheck": "^1.4.3",
@@ -44,6 +47,7 @@
     "material-ui-dropzone": "^3.5.0",
     "moment": "^2.29.4",
     "nanoid": "^4.0.0",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.5.0",
@@ -64,7 +68,7 @@
     "react-leaflet": "^4.0.2",
     "react-maskinput": "^3.2.0",
     "react-multi-select-component": "^4.3.3",
-    "react-redux": "^8.0.2",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
@@ -74,7 +78,7 @@
     "react-tag-input-component": "^1.1.1",
     "react-toastify": "^9.0.8",
     "reactstrap": "^9.1.4",
-    "redux": "^4.2.0",
+    "redux-saga": "^1.2.2",
     "sass": "^1.54.6",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
