--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@coreui/react": "^4.3.1",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@fullcalendar/core": "^5.11.3",
     "@fullcalendar/daygrid": "^5.11.3",
     "@fullcalendar/interaction": "^5.11.3",
     "@fullcalendar/react": "^5.11.2",
@@ -76,7 +77,7 @@
     "react-slick": "^0.29.0",
     "react-table": "^7.8.0",
     "react-tag-input-component": "^1.1.1",
-    "react-toastify": "^9.0.8",
+    "react-toastify": "^9.1.1",
     "reactstrap": "^9.1.4",
     "redux-saga": "^1.2.2",
     "sass": "^1.54.6",
