--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "gulp-cssbeautify": "^3.0.1",
     "gulp-postcss": "^9.0.1",
     "gulp-sass": "^5.1.0",
-    "gulp-sourcemaps": "^3.0.0"
+    "gulp-sourcemaps": "^3.0.0",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
