--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
     "typescript": "^4.8.2",
     "use-places-autocomplete": "^4.0.0",
     "validator": "^13.7.0",
-    "web-vitals": "^3.0.0"
+    "web-vitals": "^3.0.0",
+    "workbox-webpack-plugin": "^6.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
