--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@ REACT_APP_LOCAL_API_URL=http://localhost:8080
 REACT_APP_PRODUCT_API_URL=https://uat.go-farm.online
 
 REACT_APP_FIREBASE_MESSAGING_VAPID_KEY=BMeU_NOghJUw01vS30kMH3peU2BoNcRvKFbY0CKoDUaza-hkDDtTmMpL1pWFLLaRTHKUzO_kk4LhdeECiijfM6M
-
+# Admin config
+REACT_APP_CURRENT_ROLE=1
 REACT_APP_FIREBASE_API_KEY=AIzaSyDj4Epm6rG_yiDm0vjjPk7Djsxli3_ufpE
 REACT_APP_FIREBASE_AUTH_DOMAIN=go-gofarm.firebaseapp.com
 REACT_APP_FIREBASE_PROJECT_ID=go-gofarm
@@ -11,6 +12,8 @@ REACT_APP_FIREBASE_MESSAGING_SENDER_ID=238098794310
 REACT_APP_FIREBASE_APP_ID=1:238098794310:web:b9dbae80dde5f9363a8747
 REACT_APP_FIREBASE_MEASUREMENT_ID=G-7D46LPZG85
 
+# Host config
+# REACT_APP_CURRENT_ROLE=2
 # REACT_APP_FIREBASE_API_KEY=AIzaSyDj4Epm6rG_yiDm0vjjPk7Djsxli3_ufpE
 # REACT_APP_FIREBASE_AUTH_DOMAIN=go-gofarm.firebaseapp.com
 # REACT_APP_FIREBASE_PROJECT_ID=go-gofarm
