--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ REACT_APP_PRODUCT_API_URL=https://uat.go-farm.online
 
 REACT_APP_FIREBASE_MESSAGING_VAPID_KEY=BDkRs8NV4RIJ2vY47JOFCoZ6uJw3_1MypxmVRQTICd1B0RlmUbgOk_1A35N1AJveFuTy9sp1F5LcUg0FK8U5baY
 
-# Admin config
+Admin config
 REACT_APP_CURRENT_ROLE=1
 REACT_APP_FIREBASE_API_KEY=AIzaSyC6dN_H4Anuts9_izbgekuQnHHMSRyEiBU
 REACT_APP_FIREBASE_AUTH_DOMAIN=green-gofarm.firebaseapp.com
@@ -13,7 +13,7 @@ REACT_APP_FIREBASE_MESSAGING_SENDER_ID=360515549846
 REACT_APP_FIREBASE_APP_ID=1:360515549846:web:7315f3c138ee650f18e0b7
 REACT_APP_FIREBASE_MEASUREMENT_ID=G-SH8R138ZCC
 
-# Host config
+# # Host config
 # REACT_APP_CURRENT_ROLE=2
 # REACT_APP_FIREBASE_API_KEY=AIzaSyC6dN_H4Anuts9_izbgekuQnHHMSRyEiBU
 # REACT_APP_FIREBASE_AUTH_DOMAIN=green-gofarm.firebaseapp.com
