--- a/.env
+++ b/.env
@@ -3,22 +3,22 @@ REACT_APP_PRODUCT_API_URL=https://uat.go-farm.online
 
 REACT_APP_FIREBASE_MESSAGING_VAPID_KEY=BDkRs8NV4RIJ2vY47JOFCoZ6uJw3_1MypxmVRQTICd1B0RlmUbgOk_1A35N1AJveFuTy9sp1F5LcUg0FK8U5baY
 
-Admin config
-REACT_APP_CURRENT_ROLE=1
-REACT_APP_FIREBASE_API_KEY=AIzaSyC6dN_H4Anuts9_izbgekuQnHHMSRyEiBU
-REACT_APP_FIREBASE_AUTH_DOMAIN=green-gofarm.firebaseapp.com
-REACT_APP_FIREBASE_PROJECT_ID=green-gofarm
-REACT_APP_FIREBASE_STORAGE_BUCKET=green-gofarm.appspot.com
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=360515549846
-REACT_APP_FIREBASE_APP_ID=1:360515549846:web:7315f3c138ee650f18e0b7
-REACT_APP_FIREBASE_MEASUREMENT_ID=G-SH8R138ZCC
-
-# # Host config
-# REACT_APP_CURRENT_ROLE=2
+# Admin config
+# REACT_APP_CURRENT_ROLE=1
 # REACT_APP_FIREBASE_API_KEY=AIzaSyC6dN_H4Anuts9_izbgekuQnHHMSRyEiBU
 # REACT_APP_FIREBASE_AUTH_DOMAIN=green-gofarm.firebaseapp.com
 # REACT_APP_FIREBASE_PROJECT_ID=green-gofarm
 # REACT_APP_FIREBASE_STORAGE_BUCKET=green-gofarm.appspot.com
 # REACT_APP_FIREBASE_MESSAGING_SENDER_ID=360515549846
-# REACT_APP_FIREBASE_APP_ID=1:360515549846:web:52d8fdb930cbc43a18e0b7
-# REACT_APP_FIREBASE_MEASUREMENT_ID=G-N0FP69HCNS
+# REACT_APP_FIREBASE_APP_ID=1:360515549846:web:7315f3c138ee650f18e0b7
+# REACT_APP_FIREBASE_MEASUREMENT_ID=G-SH8R138ZCC
+
+# Host config
+REACT_APP_CURRENT_ROLE=2
+REACT_APP_FIREBASE_API_KEY=AIzaSyC6dN_H4Anuts9_izbgekuQnHHMSRyEiBU
+REACT_APP_FIREBASE_AUTH_DOMAIN=green-gofarm.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=green-gofarm
+REACT_APP_FIREBASE_STORAGE_BUCKET=green-gofarm.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=360515549846
+REACT_APP_FIREBASE_APP_ID=1:360515549846:web:52d8fdb930cbc43a18e0b7
+REACT_APP_FIREBASE_MEASUREMENT_ID=G-N0FP69HCNS
