--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ REACT_APP_PRODUCT_API_URL=production_api_url_here
 
 REACT_APP_FIREBASE_MESSAGING_VAPID_KEY=_vapid_key_here_
 
-# Admin config
+# Config
 REACT_APP_CURRENT_ROLE=
 REACT_APP_FIREBASE_API_KEY=
 REACT_APP_FIREBASE_AUTH_DOMAIN=
@@ -12,13 +12,3 @@ REACT_APP_FIREBASE_STORAGE_BUCKET=
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=
 REACT_APP_FIREBASE_APP_ID=
 REACT_APP_FIREBASE_MEASUREMENT_ID=
-
-# Host config
-# REACT_APP_CURRENT_ROLE=
-# REACT_APP_FIREBASE_API_KEY=
-# REACT_APP_FIREBASE_AUTH_DOMAIN=
-# REACT_APP_FIREBASE_PROJECT_ID=
-# REACT_APP_FIREBASE_STORAGE_BUCKET=
-# REACT_APP_FIREBASE_MESSAGING_SENDER_ID=
-# REACT_APP_FIREBASE_APP_ID=
-# REACT_APP_FIREBASE_MEASUREMENT_ID=
